cli/tests/testdata/compat/test_runner/esm.out
running 2 tests from ./compat/test_runner/esm.mjs
Correct assertion ... ok ([WILDCARD])
Failed assertion ... FAILED ([WILDCARD])

 ERRORS 

Failed assertion => ./compat/test_runner/esm.mjs:[WILDCARD]
error: AssertionError: Values are not strictly equal:


    [Diff] Actual / Expected


-   10
+   20

    Error.captureStackTrace(this, stackStartFn || stackStartFunction);
          ^
[WILDCARD]

 FAILURES 

Failed assertion => ./compat/test_runner/esm.mjs:[WILDCARD]

FAILED | 1 passed | 1 failed ([WILDCARD])

error: Test failed
